Youtube clone header and twitter design

--- a/Programmi_VSCode/html_css/youtube.html
+++ b/Programmi_VSCode/html_css/youtube.html
@@ -16,13 +16,20 @@
 <body>
     <div class="header">
         <div class="left-section">
-            left section
+            <img class="hamburger" src="yt_icons/hamburger-menu.svg" alt="">
+            <img class="yt-logo" src="yt_icons/youtube-logo.svg" alt="yt-logo">
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button"><img class="search-icon" src="yt_icons/search.svg" alt=""></button>
+            <button class="voice-button"><img class="voice" src="yt_icons/voice-search-icon.svg" alt=""></button>
         </div>
         <div class="right-section">
-               right section</div>
+            <img class="upload" src="yt_icons/upload.svg" alt="">
+            <img class="yt-app" src="yt_icons/youtube-apps.svg" alt="">
+            <img class="notifications" src="yt_icons/notifications.svg" alt="">
+            <img class="owner-channel" src="channel-icons/my-channel.jpeg" alt="">
+        </div>
     </div>
    <div class="video-grid">
     <div class="video-preview">
