learned css position property and added to youtube clone
 edited youtube clone header with position attribute and iniziating sidebar

--- a/Programmi_VSCode/html_css/youtube.html
+++ b/Programmi_VSCode/html_css/youtube.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="yt_styles/sidebar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -29,6 +30,32 @@
             <img class="yt-app" src="yt_icons/youtube-apps.svg" alt="">
             <img class="notifications" src="yt_icons/notifications.svg" alt="">
             <img class="owner-channel" src="channel-icons/my-channel.jpeg" alt="">
+        </div>
+    </div>
+    <div class="sidebar">
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/home.svg" alt="">
+            <p class="sidebar-text">Home</p>
+        </div>
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/explore.svg" alt="">
+            <p class="sidebar-text">Explore</p>
+        </div>
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/subscriptions.svg" alt="">
+            <p class="sidebar-text">Subscriptions</p>
+        </div>
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/originals.svg" alt="">
+            <p class="sidebar-text">Originals</p>
+        </div>
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/youtube-music.svg" alt="">
+            <p class="sidebar-text">YouTube Music</p>
+        </div>
+        <div class="sidebar-link">
+            <img class="sidebar-icon" src="yt_icons/library.svg" alt="">
+            <p class="sidebar-text">Library</p>
         </div>
     </div>
    <div class="video-grid">
