--- a/Programmi_VSCode/html_css/position.html
+++ b/Programmi_VSCode/html_css/position.html
@@ -8,24 +8,48 @@
 </head>
 <body style="height: 100000px;
     padding-top: 60px;
-    padding-left: 60px;">
+    padding-left: 90px;">
     <div style="background-color: black; color: white; position: fixed;
     top: 0px;
     left: 0px;right: 0px;
+    z-index: 100;
     height: 50px;">Header</div>
     <div style="background-color: green; color: yellow; position: fixed;
     bottom: 0;
     left: 0;
     top: 50px;
-    width: 60px;">Sidebar</div>
+    width: 80px;">Sidebar
+        <div style="position: absolute;
+        background-color: red;
+        color: white;
+        z-index: 2;
+        right: 0px; top: 0px;">
+            X
+        </div>
+    </div>
+    <div style="position: absolute;
+    background-color: red;
+    color: white;
+    z-index: 2;
+    right: 10px; top: 60px;">
+        absolute
+    </div>
     <div style="background-color: lightblue;
         width: 200px; height: 200px;
         position: static;">
         div 1
     </div>
     <div style="background-color: lightpink;
-         width: 200px; height: 200px;">
+         width: 200px; height: 200px;
+         position: relative;">
         div 2
+            <div style="position: absolute;
+                background-color: black;
+                color: white;
+                z-index: 2;
+                bottom: 10px; right: 10px;">
+                    5:00
+            </div>
     </div>
 </body>
 </html>
