completed video tutorial

--- a/Programmi_VSCode/html_css/youtube.html
+++ b/Programmi_VSCode/html_css/youtube.html
@@ -70,6 +70,7 @@
             <div>Library</div>
         </div>
     </div>
+    <!--page clone link https://supersimple.dev/exercises/youtube-->
    <div class="video-grid">
     <div class="video-preview">
         <div class="video-img">
@@ -80,9 +81,18 @@
         </div>
         <div class="video-info-grid">
             <div class="video-icon">
-                <a href="https://www.youtube.com/c/mkbhd">
-                    <img class="icon" src="channel-icons/channel-1.jpeg" alt="channel1">
-                </a> 
+                <div class="profile-icon-container">
+                    <a href="https://www.youtube.com/c/mkbhd">
+                        <img class="icon" src="channel-icons/channel-1.jpeg" alt="channel1">
+                    </a> 
+                    <div class="channel-tooltip">
+                        <img class="icon-tooltip" src="channel-icons/channel-1.jpeg" alt="channel1">
+                        <div>
+                            <p class="channel-tool-name"><strong>Marques Brownlee</strong></p>
+                            <p class="channel-subs">18,1M subscribers</p>
+                        </div>
+                    </div> 
+                </div>
             </div>
             <div class="video-texts">
                 <div class="title-name">
@@ -111,9 +121,18 @@
         </div>
         <div class="video-info-grid">
             <div class="video-icon">
-                <a href="https://www.youtube.com/c/markiplier">
-                    <img class="icon" src="channel-icons/channel-2.jpeg" alt="channel2">
-                </a> 
+                <div class="profile-icon-container">
+                    <a href="https://www.youtube.com/c/markiplier">
+                        <img class="icon" src="channel-icons/channel-2.jpeg" alt="channel2">
+                    </a> 
+                    <div class="channel-tooltip">
+                        <img class="icon-tooltip" src="channel-icons/channel-2.jpeg" alt="channel2">
+                        <div>
+                            <p class="channel-tool-name"><strong>Markiplier</strong></p>
+                            <p class="channel-subs">36,3M subscribers</p>
+                        </div>
+                    </div> 
+                </div>   
             </div>
             <div class="video-texts">
                 <div class="title-name">
@@ -142,9 +161,18 @@
             </div>
             <div class="video-info-grid">
                 <div class="video-icon">
-                    <a href="https://www.youtube.com/user/SSSniperWolf">
-                        <img class="icon" src="channel-icons/channel-3.jpeg" alt="channel3">
-                    </a>
+                    <div class="profile-icon-container">
+                        <a href="https://www.youtube.com/user/SSSniperWolf">
+                            <img class="icon" src="channel-icons/channel-3.jpeg" alt="channel3">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="icon-tooltip" src="channel-icons/channel-3.jpeg" alt="channel3">
+                            <div>
+                                <p class="channel-tool-name"><strong>SSSniperWolf</strong></p>
+                                <p class="channel-subs">34,3M subscribers</p>
+                            </div>
+                        </div>    
+                    </div>
                 </div>
                 <div class="video-texts">
                     <div class="title-name">
@@ -173,7 +201,7 @@
             </div>
             <div class="video-info-grid">
                 <div class="video-icon">
-                    <div class="icon-container">
+                    <div class="profile-icon-container">
                         <a href="https://www.youtube.com/c/veritasium">
                             <img class="icon" src="channel-icons/channel-4.jpeg" alt="channel4">
                         </a>   
@@ -214,14 +242,16 @@
             </div>
             <div class="video-info-grid">
                 <div class="video-icon">
-                    <a href="https://www.youtube.com/c/CSDojo">
-                        <img class="icon" src="channel-icons/channel-5.jpeg" alt="channel5">
-                    </a>
-                    <div class="channel-tooltip">
-                        <img class="icon-tooltip" src="channel-icons/channel-5.jpeg" alt="channel5">
-                        <div>
-                            <p class="channel-tool-name"><strong>CS Dojo</strong></p>
-                            <p class="channel-subs">1,92M subscribers</p>
+                    <div class="profile-icon-container">
+                        <a href="https://www.youtube.com/c/CSDojo">
+                            <img class="icon" src="channel-icons/channel-5.jpeg" alt="channel5">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="icon-tooltip" src="channel-icons/channel-5.jpeg" alt="channel5">
+                            <div>
+                                <p class="channel-tool-name"><strong>CS Dojo</strong></p>
+                                <p class="channel-subs">1,92M subscribers</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -253,14 +283,16 @@
                 </div>
                 <div class="video-info-grid">
                     <div class="video-icon">
-                        <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
-                            <img class="icon" src="channel-icons/channel-6.jpeg" alt="channel6">
-                        </a>
-                        <div class="channel-tooltip">
-                            <img class="icon-tooltip" src="channel-icons/channel-6.jpeg" alt="channel6">
-                            <div>
-                                <p class="channel-tool-name"><strong>MrBeast</strong></p>
-                                <p class="channel-subs">235M subscribers</p>
+                        <div class="profile-icon-container">
+                            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                                <img class="icon" src="channel-icons/channel-6.jpeg" alt="channel6">
+                            </a>
+                            <div class="channel-tooltip">
+                                <img class="icon-tooltip" src="channel-icons/channel-6.jpeg" alt="channel6">
+                                <div>
+                                    <p class="channel-tool-name"><strong>MrBeast</strong></p>
+                                    <p class="channel-subs">235M subscribers</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -291,16 +323,18 @@
                 </div>
                 <div class="video-info-grid">
                     <div class="video-icon">
-                        <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
-                            <img class="icon" src="channel-icons/channel-7.jpeg" alt="channel7">
-                        </a>
-                        <div class="channel-tooltip">
-                            <img class="icon-tooltip" src="channel-icons/channel-7.jpeg" alt="channel7">
-                            <div>
-                                <p class="channel-tool-name"><strong>RealLifeLore</strong></p>
-                                <p class="channel-subs">7,3M subscribers</p>
-                            </div>
-                        </div>  
+                        <div class="profile-icon-container">
+                            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
+                                <img class="icon" src="channel-icons/channel-7.jpeg" alt="channel7">
+                            </a>
+                            <div class="channel-tooltip">
+                                <img class="icon-tooltip" src="channel-icons/channel-7.jpeg" alt="channel7">
+                                <div>
+                                    <p class="channel-tool-name"><strong>RealLifeLore</strong></p>
+                                    <p class="channel-subs">7,3M subscribers</p>
+                                </div>
+                            </div>  
+                        </div>         
                     </div>
                     <div class="video-texts">
                         <div class="title-name">
@@ -330,16 +364,18 @@
                     </div>
                     <div class="video-info-grid">
                         <div class="video-icon">
-                            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
-                                <img class="icon" src="channel-icons/channel-8.jpeg" alt="channel8">
-                            </a>
-                            <div class="channel-tooltip">
-                                <img class="icon-tooltip" src="channel-icons/channel-8.jpeg" alt="channel8">
-                                <div>
-                                    <p class="channel-tool-name"><strong>Tech Vision</strong></p>
-                                    <p class="channel-subs">826k subscribers</p>
-                                </div>
-                            </div>    
+                            <div class="profile-icon-container">
+                                <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
+                                    <img class="icon" src="channel-icons/channel-8.jpeg" alt="channel8">
+                                </a>
+                                <div class="channel-tooltip">
+                                    <img class="icon-tooltip" src="channel-icons/channel-8.jpeg" alt="channel8">
+                                    <div>
+                                        <p class="channel-tool-name"><strong>Tech Vision</strong></p>
+                                        <p class="channel-subs">826k subscribers</p>
+                                    </div>
+                                </div>    
+                            </div>  
                         </div>
                         <div class="video-texts">
                             <div class="title-name">
